Modification pour que ca fonctionne

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
+        "easycorp/easyadmin-bundle": "^4.4",
         "fakerphp/faker": "^1.20",
         "liip/imagine-bundle": "^2.9",
         "phpdocumentor/reflection-docblock": "^5.3",
