--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "debril/feed-io": "^6.0",
         "doctrine/annotations": "^1.0",
         "doctrine/data-fixtures": "^1.5",
         "doctrine/doctrine-bundle": "^2.7",
@@ -14,6 +15,7 @@
         "doctrine/orm": "^2.13",
         "easycorp/easyadmin-bundle": "^4.4",
         "fakerphp/faker": "^1.20",
+        "kbariotis/feedly-api": "dev-master",
         "liip/imagine-bundle": "^2.9",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.14",
